<LinearLayout
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:padding="@dimen/default_padding"
        map:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:background="@android:color/white" android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/device_location"
    />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_device_latitude"
                android:layout_weight="1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_device_latitude"
                    android:textSize="@dimen/input_text_size"
                    android:inputType="numberDecimal|numberSigned"
                    android:hint="@string/hint_latitude"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_device_longitude"
                android:layout_weight="1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_device_longitude"
                    android:inputType="numberDecimal|numberSigned"
                    android:textSize="@dimen/input_text_size"
                    android:hint="@string/hint_longitude"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <TextView
            android:layout_marginTop="@dimen/input_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/geofence_area"
    />

    <LinearLayout
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_latitude"
            android:layout_weight="1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_latitude"
                android:textSize="@dimen/input_text_size"
                android:inputType="numberDecimal|numberSigned"
                android:hint="@string/hint_latitude"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_longitude"
            android:layout_weight="1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_longitude"
                android:textSize="@dimen/input_text_size"
                android:inputType="numberDecimal|numberSigned"
                android:hint="@string/hint_longitude"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_radius"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_radius"
                android:textSize="@dimen/input_text_size"
                android:inputType="numberDecimal|numberSigned"
                android:hint="@string/hint_radius"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_wireless_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_wireless_name"
                android:textSize="@dimen/input_text_size"
                android:inputType="numberDecimal|numberSigned"
                android:hint="@string/hint_wifi_network"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:layout_margin="@dimen/input_margin"
            android:layout_gravity="center"
            style="@style/ButtonTheme"
            android:id="@+id/btn_check"
            android:textColor="@android:color/white"
            android:textAllCaps="true"
            android:text="@string/check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
</LinearLayout>