...
    <string name="permission_rationale_geofence">Location permission is needed to show geofence area on map</string>
    <string name="use_current_location">Setting current location...</string>
    <string name="failed_to_get_current_location">Failed to get current location. Using Kuala Lumpur city centre as current location.</string>

    <string name="status">Status: </string>
    <string name="unknown">Unknown</string>
    <string name="inside">Inside</string>
    <string name="outside">Outside</string>
    <string name="inside_message">Outside</string>
    <string name="device_inside_message">Device is inside geofence area</string>
    <string name="device_outside_message">Device is outside geofence area</string>

    <!--Bottom fragment-->
    <string name="check">Check</string>
...
