...
                android:textSize="@dimen/label_text_size"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/tv_result"
                android:textAllCaps="true"
                android:text="@string/unknown"
                android:textSize="@dimen/label_text_size"
                android:layout_marginLeft="@dimen/input_margin"
                android:layout_width="wrap_content"
                android:textStyle="bold"
...
